finalize events page

--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -68,7 +68,7 @@
             <div class="col-md-3">
                 <h3>{% trans 'About meetups' %}</h3>
                 <div class="program-sidebar-box">
-                  <p>{% trans 'Meetings, especially regular meetings of people who share a particular interest such as a programming language or entrepreneurship' %}</p>
+                  <p>{% trans 'Our open space is being used by several of the city’s creative teams as a meeting space and those meetings are open to anyone interested. Meetups’ participants comprise the wider OK!Thess community, a community that exchanges knowledge and experiences targeting to create added value for all of its members.' %}</p>
                 </div>
                 <!--<div class="program-sidebar-meetup">
                   <h3 class="yellow">OK!Thess Meetup <i class="glyphicon glyphicon-circle-arrow-right"></i></h3>
