make all but support and contact optional

--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -59,43 +59,43 @@
                         <label for="id_answer_market_1">
                             {% trans 'Who are your target customers? Briefly describe a typical person who would buy your product/service.' %}
                         </label>
-                        <textarea name="answer_market_1" cols="50" rows="2" class="form-control" required="required" id="id_answer_market_1"></textarea>
+                        <textarea name="answer_market_1" cols="50" rows="2" class="form-control" id="id_answer_market_1"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_market_2">
                             {% trans 'What problem or challenge does your product/service solve for such customers?' %}
                         </label>
-                        <textarea name="answer_market_2" cols="50" rows="2" class="form-control" required="required" id="id_answer_market_2"></textarea>
+                        <textarea name="answer_market_2" cols="50" rows="2" class="form-control" id="id_answer_market_2"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_market_3">
                             {% trans 'What kind of solutions, if any, are your target customers using today to solve this problem or challenge?' %}
                         </label>
-                        <textarea name="answer_market_3" cols="50" rows="2" class="form-control" required="required" id="id_answer_market_3"></textarea>
+                        <textarea name="answer_market_3" cols="50" rows="2" class="form-control" id="id_answer_market_3"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_market_4">
                             {% trans 'Can you name two or three of your closest competitors, if any exist? Please provide links to their websites.' %}
                         </label>
-                        <textarea name="answer_market_4" cols="50" rows="4" class="form-control" required="required" id="id_answer_market_4"></textarea>
+                        <textarea name="answer_market_4" cols="50" rows="4" class="form-control" id="id_answer_market_4"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_market_5">
                             {% trans 'What is different about your product/service that makes it better than the competition?' %}
                         </label>
-                        <textarea name="answer_market_5" cols="50" rows="2" class="form-control" required="required" id="id_answer_market_5"></textarea>
+                        <textarea name="answer_market_5" cols="50" rows="2" class="form-control" id="id_answer_market_5"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_market_6">
                             {% trans 'Please give us your assessment of the market potential. For instance, how large is the total addressable market for this product/service? How many potential customers exist out there? How much money could they possibly spend with your company every year? Is this market going to be growing year over year? What are the trends affecting market growth?' %}
                         </label>
-                        <textarea name="answer_market_6" cols="50" rows="3" class="form-control" required="required" id="id_answer_market_6"></textarea>
+                        <textarea name="answer_market_6" cols="50" rows="3" class="form-control" id="id_answer_market_6"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_market_7">
                             {% trans 'Have you yet taken any steps to validate the demand for your product/service in the market?' %}
                         </label>
-                        <textarea name="answer_market_7" cols="50" rows="2" class="form-control" required="required" id="id_answer_market_7"></textarea>
+                        <textarea name="answer_market_7" cols="50" rows="2" class="form-control" id="id_answer_market_7"></textarea>
                     </div>
                     <br>
                     <h4>{% trans 'Team' %}</h4>
@@ -103,43 +103,43 @@
                         <label for="id_answer_team_1">
                             {% trans 'How many founders do you have in the team and how many team members in total, including employees (if any)?' %}
                         </label>
-                        <textarea name="answer_team_1" cols="50" rows="2" class="form-control" required="required" id="id_answer_team_1"></textarea>
+                        <textarea name="answer_team_1" cols="50" rows="2" class="form-control" id="id_answer_team_1"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_team_2">
                             {% trans 'What is your team composition and roles? For every team member please give us: 1) name; 2) description of role in the team; 3) full-time or part-time involvement status; 4) relevant professional experience or educational background; 5) links to online profiles if available.' %}
                         </label>
-                        <textarea name="answer_team_2" cols="50" rows="6" class="form-control" required="required" id="id_answer_team_2"></textarea>
+                        <textarea name="answer_team_2" cols="50" rows="6" class="form-control" id="id_answer_team_2"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_team_3">
                             {% trans 'How equipped is your current team to bring this product/service to the market?' %}
                         </label>
-                        <textarea name="answer_team_3" cols="50" rows="2" class="form-control" required="required" id="id_answer_team_3"></textarea>
+                        <textarea name="answer_team_3" cols="50" rows="2" class="form-control" id="id_answer_team_3"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_team_4">
                             {% trans 'Will you need to add more core skills to the team? ' %}
                         </label>
-                        <textarea name="answer_team_4" cols="50" rows="2" class="form-control" required="required" id="id_answer_team_4"></textarea>
+                        <textarea name="answer_team_4" cols="50" rows="2" class="form-control" id="id_answer_team_4"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_team_5">
                             {% trans 'Why did the team start working on this idea? What excites you about it?' %}
                         </label>
-                        <textarea name="answer_team_5" cols="50" rows="2" class="form-control" required="required" id="id_answer_team_5"></textarea>
+                        <textarea name="answer_team_5" cols="50" rows="2" class="form-control" id="id_answer_team_5"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_team_6">
                             {% trans 'When did you start working on the project and what progress have you made over the past 3 months?' %}
                         </label>
-                        <textarea name="answer_team_6" cols="50" rows="2" class="form-control" required="required" id="id_answer_team_6"></textarea>
+                        <textarea name="answer_team_6" cols="50" rows="2" class="form-control" id="id_answer_team_6"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_team_7">
                             {% trans "What is the founders' 3-year vision for the business? If all goes perfect, what should the business look like in 3 years from now?" %}
                         </label>
-                        <textarea name="answer_team_7" cols="50" rows="3" class="form-control" required="required" id="id_answer_team_7"></textarea>
+                        <textarea name="answer_team_7" cols="50" rows="3" class="form-control" id="id_answer_team_7"></textarea>
                     </div>
                     <br>
                     <h4>{% trans 'Support' %}</h4>
