--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -33,13 +33,13 @@
                         <label for="id_answer_idea_1">
                             {% trans 'Please provide your project/company/team name and web address (if available).' %}
                         </label>
-                        <textarea name="answer_idea_1" cols="50" rows="2" class="form-control" required="" id="id_answer_idea_1"></textarea>
+                        <textarea name="answer_idea_1" cols="50" rows="2" class="form-control" id="id_answer_idea_1"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_idea_2">
                             {% trans 'Please describe your concept with a one-sentence pitch, as follows: "My company, _(insert name of company)_, is developing _(a defined offering)_ to help _(a defined audience)_ _(solve a problem)_ with _(secret sauce)_". (https://fi.co/madlibs)' %}
                         </label>
-                        <textarea name="answer_idea_2" cols="50" rows="2" class="form-control" required="" id="id_answer_idea_2"></textarea>
+                        <textarea name="answer_idea_2" cols="50" rows="2" class="form-control" id="id_answer_idea_2"></textarea>
                     </div>
                     <div class="form-group">
                         <label for="id_answer_idea_3">
